feat: 新增自定义替换函数名和自动引入功能
- 新增 replacement.functionName 配置，支持自定义替换函数名（默认 ）
- 新增 replacement.autoImport 配置，支持智能自动引入i18n工具包
- 支持针对不同文件类型配置不同的import语句
- 智能检测中文字符，只对包含中文的文件进行处理和引入
- 新增文件模式匹配工具，支持glob模式
- 更新配置文档和使用示例
- 功能向后兼容，默认关闭自动引入功能

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "react-i18n-extractor",
+  "name": "i18n-xy",
   "version": "1.0.0",
   "description": "自动提取React项目中的中文字符串并进行国际化的CLI工具",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "bin": {
-    "react-i18n-extractor": "dist/cli.cjs",
-    "ri18n": "dist/cli.cjs",
+    "i18n-xy": "dist/cli.cjs",
     "i18nx": "dist/cli.cjs"
   },
   "files": [
@@ -30,13 +29,41 @@
   "keywords": [
     "i18n",
     "internationalization",
+    "localization",
+    "l10n",
+    "translation",
     "react",
+    "vue",
+    "angular",
+    "frontend",
     "cli",
+    "command-line-tool",
+    "development-tool",
+    "build-tool",
     "typescript",
+    "javascript",
+    "jsx",
+    "tsx",
     "babel",
     "ast",
+    "abstract-syntax-tree",
+    "code-transformation",
+    "string-extraction",
+    "extraction",
+    "automation",
     "chinese",
-    "pinyin"
+    "chinese-characters",
+    "pinyin",
+    "chinese-to-pinyin",
+    "multilingual",
+    "language-files",
+    "json-generation",
+    "locale",
+    "text-processing",
+    "parser",
+    "generator",
+    "codemod",
+    "refactoring"
   ],
   "author": "",
   "license": "ISC",
