refactor: 优化自动引入逻辑以提升性能和可配置性
- 新增 insertPosition 配置，支持 'top' 和 'afterImports' 两种插入位置
- 实现按需插入机制：只有在实际发生中文替换时才插入import语句
- 新增重复检测机制：避免重复插入相同的import语句
- 移除预先检查中文的逻辑，优化处理性能
- 只对实际发生替换的文件进行输出，避免不必要的文件修改
- 功能验证通过：支持不同插入位置和重复防护

--- a/src/config/i18n.config.example.json
+++ b/src/config/i18n.config.example.json
@@ -40,6 +40,7 @@
     "functionName": "t",
     "autoImport": {
       "enabled": true,
+      "insertPosition": "afterImports",
       "imports": {
         "**/*.{js,jsx}": {
           "importStatement": "import { useTranslation } from 'react-i18next';\nconst { t } = useTranslation();"
