feat: 集成百度翻译API功能
✨ 新功能:
- 集成百度翻译API，支持自动翻译提取的中文字符串
- 新增 translate 命令，支持单个文本和批量翻译
- 模块化翻译服务架构，支持多种翻译提供者
- 智能批量翻译，支持断点续传和API限流控制

🔧 技术实现:
- 新增 TranslationProvider 接口，支持可扩展的翻译服务
- 实现 BaiduTranslationProvider 百度翻译服务提供者
- 创建 TranslationManager 翻译管理器，统一管理不同翻译服务
- 新增翻译配置选项，支持API密钥管理和安全性

📚 文档更新:
- 更新配置文档，添加详细的翻译功能说明
- 更新README，添加翻译功能使用示例
- 新增百度翻译API密钥获取指南

🛡️ 安全性:
- 支持环境变量配置API密钥
- 动态导入翻译依赖，避免不必要的加载
- 完善的错误处理和用户提示

🎯 使用场景:
- 支持单个文本翻译测试
- 支持批量翻译语言文件
- 支持多语言方向翻译
- 智能的已翻译内容检测，避免重复翻译

--- a/src/config/i18n.config.example.json
+++ b/src/config/i18n.config.example.json
@@ -50,5 +50,15 @@
         }
       }
     }
+  },
+  "translation": {
+    "enabled": true,
+    "provider": "baidu",
+    "defaultSourceLang": "zh",
+    "defaultTargetLang": "en",
+    "baidu": {
+      "appid": "your_baidu_app_id",
+      "key": "your_baidu_api_key"
+    }
   }
 }
