feat: 完善翻译功能 - 添加并发控制、重试机制和完整CLI支持
- 新增并发控制配置（concurrency，默认10）
- 新增重试机制配置（retryTimes，默认3）
- 新增延迟配置（retryDelay, batchDelay，默认0）
- 新增TranslationQueue并发队列管理
- 新增--test参数支持单文本翻译测试
- 新增-j参数支持指定JSON文件翻译
- 完善CLI参数和错误提示
- 更新配置文档和README
- 添加i18n.config.example.json到gitignore

--- a/src/config/i18n.config.example.json
+++ b/src/config/i18n.config.example.json
@@ -56,6 +56,10 @@
     "provider": "baidu",
     "defaultSourceLang": "zh",
     "defaultTargetLang": "en",
+    "concurrency": 10,
+    "retryTimes": 3,
+    "retryDelay": 0,
+    "batchDelay": 0,
     "baidu": {
       "appid": "your_baidu_app_id",
       "key": "your_baidu_api_key"
