--- a/.github/workflows/pre-publish.yml
+++ b/.github/workflows/pre-publish.yml
@@ -48,11 +48,11 @@ jobs:
       - name: Install Dependence
         run: pnpm install --no-frozen-lockfile
 
-      - name: Type check
-        run: pnpm run type-check
+      # - name: Type check
+      #   run: pnpm run type-check
 
-      - name: Lint check
-        run: pnpm run lint:check
+      # - name: Lint check
+      #   run: pnpm run lint:check
 
       - name: Build dist
         run: |
