feat: 完善i18n工具核心功能和文档
- 完善配置管理和类型定义
- 优化key生成逻辑和去重机制
- 完善README和配置文档
- 增加示例配置文件

--- a/i18n.config.json
+++ b/i18n.config.json
@@ -16,7 +16,8 @@
     "maxChineseLength": 10,
     "hashLength": 6,
     "maxRetryCount": 5,
-    "duplicateKeyStrategy": "suffix",
+    "reuseExistingKey": true,
+    "duplicateKeySuffix": "hash",
     "keyPrefix": "",
     "separator": "_",
     "pinyinOptions": {
