--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           git add package.json
           git commit -m "Bump version to ${{ env.TAG_NAME }}"
-          git tag -a "${{ env.TAG_NAME }}" -m "Release ${{ env.TAG_NAME }}"
+          # git tag -a "${{ env.TAG_NAME }}" -m "Release ${{ env.TAG_NAME }}"
           git push origin main
-          git push origin --tags
+          # git push origin --tags
 
