增加引号配置项支持和增强AST处理能力

--- a/src/config/i18n.config.example.json
+++ b/src/config/i18n.config.example.json
@@ -39,6 +39,7 @@
   },
   "replacement": {
     "functionName": "t",
+    "quoteType": "single",
     "autoImport": {
       "enabled": true,
       "insertPosition": "afterImports",
