增强AST处理能力，支持更多中文字符串场景

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint:check": "eslint src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
     "prepublishOnly": "pnpm run build",
-    "postpack": "echo '✅ 打包完成，可以使用 npm publish 发布'"
+    "postpack": "echo '✅ 打包完成，可以使用 npm publish 发布'",
+    "extract": "rm -rf dist output locales test/temp coverage && pnpm build &&node dist/cli.cjs extract"
   },
   "keywords": [
     "i18n",
