--- a/src/config/i18n.config.json
+++ b/src/config/i18n.config.json
@@ -24,5 +24,10 @@
   "output": {
     "prettyJson": true,
     "localeFileName": "{locale}.json"
+  },
+  "replacement": {
+    "functionName": "$t",
+    "quoteType": "single",
+    "useOriginalTextAsKey": false
   }
 }
