--- a/i18n.config.json
+++ b/i18n.config.json
@@ -4,7 +4,7 @@
   "outputDir": "locales",
   "tempDir": "test/temp",
   "include": [
-    "test/demo/**/*.{js,jsx,ts,tsx}"
+    "test/temp/**/*.{js,jsx,ts,tsx}"
   ],
   "exclude": [
     "node_modules/**",
