--- a/i18n.config.json
+++ b/i18n.config.json
@@ -1,6 +1,6 @@
 {
   "locale": "zh-CN",
-  "fallbackLocale": "en-US",
+  "displayLanguage": "en-US",
   "outputDir": "locales",
   "tempDir": "test/temp",
   "include": [
