--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint src --ext .ts,.tsx --fix",
-    "lint:check": "eslint src --ext .ts,.tsx",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "eslint main --ext .ts,.tsx --fix",
+    "lint:check": "eslint main --ext .ts,.tsx",
+    "format": "prettier --write \"main/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"main/**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:fix": "pnpm run format && pnpm run lint",
     "type-check": "tsc --noEmit",
     "check-all": "pnpm run type-check && pnpm run lint:check && pnpm run format:check",
     "prepublishOnly": "pnpm run build",
     "postpack": "echo '✅ 打包完成，可以使用 npm publish 发布'",
-    "extract": "rm -rf dist output locales test/temp coverage && pnpm build &&node dist/cli.cjs extract",
-    "rplkey": "pnpm build &&node dist/cli.cjs rpkey"
+    "clean-test": "rm -rf test-output dist",
+    "extract": "pnpm build && node dist/cli.cjs extract",
+    "check": "pnpm build && node dist/cli.cjs check --no-file",
+    "translate": "pnpm build && node dist/cli.cjs translate --batch",
+    "rpkey": "pnpm build && node dist/cli.cjs rpkey",
+    "test:full": "pnpm clean-test && pnpm build && pnpm extract && pnpm check && pnpm translate && pnpm rpkey && echo '✅ 所有CLI测试完成'"
   },
   "keywords": [
     "i18n",
@@ -103,6 +107,7 @@
     "@babel/traverse": "^7.27.4",
     "@babel/types": "^7.27.6",
     "baidu-translate-service": "^2.2.4",
+    "cli-progress": "^3.12.0",
     "commander": "^14.0.0",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
